# shavian.rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
nix/: flake-shell.nix
src/: main.rs
